Fix double "the" typos

--- a/source/history.html
+++ b/source/history.html
@@ -2662,7 +2662,7 @@ changed with !SetOption/!SetVariable.</li>
 	<li>The about dialog is now modeless.</li>
 	<li>Fixed a memory leak in perfmon.dll.</li>
 	<li>Created a AdvancedCPU plugin that allows include/exclude processes in % Processor Time.</li>
-	<li>Added SnapEdges option that snaps the window the the screen edges when moved.</li>
+	<li>Added SnapEdges option that snaps the window to the screen edges when moved.</li>
 	<li>Added NumOfDecimals option for the string meter.</li>
 	<li>Added !RainmeterToggle bang.</li>
 </ul>
