--- a/source/manual/getting-started/basic-tutorials/system.html
+++ b/source/manual/getting-started/basic-tutorials/system.html
@@ -235,7 +235,7 @@ Text=%1%
 
 <p style="clear: both;">You know, it would be nice if the color of that text changed when the CPU usage hits some value we define. What we can do is change the color to "red" if the value is at or above 25%, and back to "blue" if it is below that value.</p>
 
-<p>Go back near the top of the code and find the the <b>[MeasureCPU]</b> measure. Let's add a few lines to it.</p>
+<p>Go back near the top of the code and find the <b>[MeasureCPU]</b> measure. Let's add a few lines to it.</p>
 
 ``` ini
 [MeasureCPU]
