--- a/source/manual/lua-scripting/inline-lua.html
+++ b/source/manual/lua-scripting/inline-lua.html
@@ -343,7 +343,7 @@ FontWeight=400
 FontColor=255,255,255,255
 AntiAlias=1
 ; In this we use an inline Lua variable to call the TranslateHeader() function hosted
-; by our [MeasureScript] measure, and pass it the the string for the variable [#MainLang].
+; by our [MeasureScript] measure, and pass it to the string for the variable [#MainLang].
 ; It will "return" the result, a lookup translation of the text "Today is", and replace that
 ; in the value of the Text option.
 Text=[&MeasureScript:TranslateHeader('[#MainLang])']
