--- a/source/manual/plugins/runcommand.html
+++ b/source/manual/plugins/runcommand.html
@@ -12,7 +12,7 @@ title: 'RunCommand plugin'
 
 <ul>
 <li>The command can be run with a <em>hidden</em> initial state, to eliminate the cmd.exe (DOS) Command Prompt window that is created when an external command-line command or program is executed normally from Rainmeter.</li>
-<li>Any output of the command to STDOUT (the "Standard Out" string output of a program in a cmd.exe Command Prompt window) can be captured, either directly, as the the value of the plugin measure, or piped to a text file for additional processing as needed.</li>
+<li>Any output of the command to STDOUT (the "Standard Out" string output of a program in a cmd.exe Command Prompt window) can be captured, either directly, as the value of the plugin measure, or piped to a text file for additional processing as needed.</li>
 <li>The plugin can detect that a command is "finished", and your skin can in effect wait for the command to be done before taking some action and using any returned value.</li>
 <li>The plugin can detect that a command caused a set of "error" return codes, and the skin can take some action based on success or failure of the command and the type of error.</li>
 <li>The plugin can be set with a "timeout" value, which will automatically end the external command or program when the timeout value is reached.</li>
