--- a/source/manual/skins/option-types.html
+++ b/source/manual/skins/option-types.html
@@ -147,7 +147,7 @@ LeftMouseUpAction=!SetOption SomeMeter FontSize #VarName#
 ; The FontSize option for SomeMeter will be set to the current value of the variable.
 
 LeftMouseUpAction=!SetOption SomeMeter FontSize #*VarName*#
-; The FontSize option for SomeMeter will be set to the the string "#VarName#"
+; The FontSize option for SomeMeter will be set to the string "#VarName#"
 
 LeftMouseUpAction=!SetOption SomeMeter FontSize [MeasureName]
 ; The FontSize option for SomeMeter will be set to the current value of the measure.
