--- a/source/manual/bangs.html
+++ b/source/manual/bangs.html
@@ -529,7 +529,7 @@ title: 'Bangs'
 		Sets the <a href="!settings/skin-sections/#AlphaValue">transparency</a> of the configs in the specified <a href="!groups/">group</a>.
 		<ul>
 		<li><code>Alpha</code> (required): From 0 (invisible) to 255 (opaque).</li>
-		<li><code>Group</code> (required): Name of the the group.</li>
+		<li><code>Group</code> (required): Name of the group.</li>
 		</ul>
 		<br><b>Example:</b> <code>!SetTransparencyGroup "128" "SuiteName"</code>
 	</dd>
