Fix more minor typos

--- a/source/manual/getting-started/index.html
+++ b/source/manual/getting-started/index.html
@@ -43,7 +43,7 @@ subtitle: 'An introduction to Rainmeter.'
 	<p>An example of some Rainmeter code.</p>
 </div>
 
-<p>If you want to <b>create</b> skins, or <b>modify</b> someone else's skin beyond the customization options that the author has provided, then you will get some hands-on experience with Rainmeter's code language. You do not need to be professional programmer to become a proficient writer of Rainmeter skins&mdash;although those skills will certainly help you, and a full-powered <a href="!lua-scripting/">scripting</a> language is available for advanced users. But all of a skin's basic properties are written using a simple configuration language that is suitable for novice programmers. The difficulty level is similar to that of <a href="https://en.wikipedia.org/wiki/HTML">HTML</a> or <a href="https://en.wikipedia.org/wiki/JavaScript">JavaScript</a>.</p>
+<p>If you want to <b>create</b> skins, or <b>modify</b> someone else's skin beyond the customization options that the author has provided, then you will get some hands-on experience with Rainmeter's code language. You do not need to be a professional programmer to become a proficient writer of Rainmeter skins&mdash;although those skills will certainly help you, and a full-powered <a href="!lua-scripting/">scripting</a> language is available for advanced users. But all of a skin's basic properties are written using a simple configuration language that is suitable for novice programmers. The difficulty level is similar to that of <a href="https://en.wikipedia.org/wiki/HTML">HTML</a> or <a href="https://en.wikipedia.org/wiki/JavaScript">JavaScript</a>.</p>
 
 <h2 id="WhatIsntRainmeter">What <em>isn't</em> Rainmeter?</h2>
 
