--- a/source/manual/measures/index.html
+++ b/source/manual/measures/index.html
@@ -78,7 +78,7 @@ MeasureName=MeasureCPUTemp
 
 <p>In addition, you can use the percentage value of a measure in a formula or String meter by using the measure as a <a href="!variables/section-variables/">Section Variable</a>, with the <a href="!variables/section-variables/#Percentual">percentage parameter</a>.</p>
 
-<p>Setting these options has no effect on the actual value of the measure, but only defines the low and high range, to used by meters.</p>
+<p>Setting these options has no effect on the actual value of the measure, but only defines the low and high range, to be used by meters.</p>
 
 <p><b>Note:</b> The current MinValue / MaxValue "range" for a measure can be viewed in the <a href="!user-interface/about/#SkinsTab">Skins tab</a> of the <a href="!user-interface/about/">About window</a>. This can be useful for debugging problems when you are not getting the meter output you expect.</p>
 
