--- a/source/snippets/change-case.html
+++ b/source/snippets/change-case.html
@@ -3,7 +3,7 @@ layout: docs
 permalink: snippets/change-case/
 title: 'Change Case'
 ---
-<p>This functions can be used to change the case of a string to any of Upper, Lower, Sentence (first word capitalized) or Proper (each word capitalized).</p>
+<p>This function can be used to change the case of a string to any of Upper, Lower, Sentence (first word capitalized) or Proper (each word capitalized).</p>
 
 <div class="noscroll">
 ``` lua
