--- a/source/developers/index.html
+++ b/source/developers/index.html
@@ -54,7 +54,7 @@ set CERTKEY=certpassword
 
 <p>Anyone can create and distribute <a href="/manual/plugins/#Custom">custom plugins</a> for Rainmeter.</p>
 
-<p><b>Note:</b> The Rainmeter Skin Installer program, which is used by end-users to install the skins containing your plugin, will not allow the same or older version of the plugin to overwrite a newer version. The means that it is critically important that every release of your plugin must have the "File version" number incremented. If you don't do this, your plugin will not be distributed.</p>
+<p><b>Note:</b> The Rainmeter Skin Installer program, which is used by end-users to install the skins containing your plugin, will not allow the same or older version of the plugin to overwrite a newer version. This means that it is critically important that every release of your plugin must have the "File version" number incremented. If you don't do this, your plugin will not be distributed.</p>
 
 <p>The only software you will need is <b>Microsoft Visual Studio 2019</b> or the free <b>Microsoft Visual Community</b> which can be obtained at <a href="https://visualstudio.microsoft.com/downloads/">Download Visual Studio</a>. Be sure to download and apply any Visual Studio Updates when prompted.</p>
 
