--- a/source/snippets/index.html
+++ b/source/snippets/index.html
@@ -79,7 +79,7 @@ title: 'Rainmeter Snippets'
 	<li><b><a href="/snippets/parse-file-path/">Parse File Path</a></b><br>
 	A function that breaks down a file or folder path and returns the components as a table.</li>
 	<li><b><a href="/snippets/change-case/">Change Case</a></b><br>
-	A set of function to change a string to either Sentence Case or Title Case.</li>
+	A function to change the case of a string to any of Upper, Lower, Sentence or Proper.</li>
 </ul>
 
 <h2 id="Time">Time</h2>
